--- a/essential-workforce/index.html
+++ b/essential-workforce/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Essential workforce</h1>
           
-            <p class="small-text">Last updated&nbsp;September 22, 2020 at 11:39 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 3:26 PM</p>
           
         </div>
       </div>
@@ -179,7 +179,7 @@
 
 
 
-<p><a href="https://files.covid19.ca.gov/pdf/EssentialCriticalInfrastructureWorkers.pdf">See PDF version of essential workforce list</a>.</p>
+<p>See <a href="https://files.covid19.ca.gov/pdf/EssentialCriticalInfrastructureWorkers.pdf">PDF version of essential workforce list</a>.</p>
 
 
 
@@ -195,7 +195,7 @@
 
 
 
-<h2><strong>Sector index:</strong></h2>
+<h2>Sector index</h2>
 
 
 
@@ -203,7 +203,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>1. <strong>Health Care / Public Health</strong></h4>
+<h4>1. Health Care / Public Health</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -251,7 +251,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>2. <strong>Emergency Services</strong></h4>
+<h4>2. Emergency Services</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -299,7 +299,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>3. <strong>Food and Agriculture</strong></h4>
+<h4>3. Food and Agriculture</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -347,7 +347,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>4. <strong>Energy</strong></h4>
+<h4>4. Energy</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -430,7 +430,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>5. <strong>Water and Wastewater</strong></h4>
+<h4>5. Water and Wastewater</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -473,7 +473,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>6. <strong>Transportation and Logistics</strong></h4>
+<h4>6. Transportation and Logistics</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -516,7 +516,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>7. <strong>Communications and Information Technology</strong></h4>
+<h4>7. Communications and Information Technology</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -569,13 +569,13 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>8. <strong>Government Operations and other community-based essential functions</strong></h4>
+<h4>8. Government Operations and other community-based essential functions</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p><strong>Essential workforce, if remote working is not practical:</strong></p>
-<ol><li>Critical government workers, as defined by the employer and consistent with Continuity of Operations Plans and Continuity of Government plans.</li><li>County workers responsible for determining eligibility for safety net benefits</li><li>The Courts, consistent with <a href="https://newsroom.courts.ca.gov/covid-19-and-courts">guidance</a> released by the California Chief Justice</li><li>Workers who support administration and delivery of unemployment insurance programs, income maintenance, employment service, disaster assistance, workers’ compensation insurance and benefits programs, and pandemic assistance</li><li>Workers to ensure continuity of building functions, including but not limited to security and environmental controls, the manufacturing and distribution of the products required for these functions, and the permits and inspection for construction.</li><li>Elections personnel</li><li>Federal, State, and Local, Tribal, and Territorial employees who support Mission Essential Functions and communications networks</li><li>Trade Officials (FTA negotiators; international data flow administrators)</li><li>Weather forecasters</li><li>Workers that maintain digital systems infrastructure supporting other critical government operations</li><li>Workers who support necessary credentialing, vetting and licensing operations for critical sector workers and operations.</li><li>Workers who are critical to facilitating trade in support of the national, state, and local emergency response supply chain</li><li>Workers supporting public and private childcare establishments, pre-K establishments, K-12 schools, colleges, and universities for purposes of distance learning, provision of school meals, or care and supervision of minors to support essential workforce across all sectors</li><li>Staff at government offices who perform title search, notary, and recoding services in support of mortgage and real estate services and transactions; </li><li>Workers and instructors supporting academies and training facilities and courses for the purpose of graduating students and cadets that comprise the essential workforce for all identified critical sectors</li><li>Clergy for essential support and faith-based services that are provided through streaming or other technologies that support physical distancing and state public health guidelines.</li><li>Human services providers, especially for at risk populations, including home delivered meal providers for older adults, people with disabilities, and others with chronic health conditions; home-maker services for frail, homebound, older adults; personal assistance services providers to support activities of daily living for older adults, people with disabilities, and others with chronic health conditions who live independently in the community with supports and services; home health providers who deliver health care services for older adults, people with disabilities, and others with chronic health conditions who live independently in the community with supports and services.</li><li>Government entities, and contractors that work in support of local, state, and federal public health and medical mission sets, including but not limited to supporting access to healthcare and associated payment functions, conducting public health functions, providing medical care, supporting emergency management, or other services necessary for supporting the COVID-19 response. </li></ol>
+<ol><li>Critical government workers, as defined by the employer and consistent with Continuity of Operations Plans and Continuity of Government plans.</li><li>County workers responsible for determining eligibility for safety net benefits</li><li>The Courts, consistent with <a href="https://newsroom.courts.ca.gov/covid-19-and-courts">guidance</a> released by the California Chief Justice</li><li>Workers who support administration and delivery of unemployment insurance programs, income maintenance, employment service, disaster assistance, workers’ compensation insurance and benefits programs, and pandemic assistance</li><li>Workers to ensure continuity of building functions, including but not limited to security and environmental controls, the manufacturing and distribution of the products required for these functions, and the permits and inspection for construction.</li><li>Elections personnel</li><li>Federal, State, and Local, Tribal, and Territorial employees who support Mission Essential Functions and communications networks</li><li>Trade Officials (FTA negotiators; international data flow administrators)</li><li>Weather forecasters</li><li>Workers that maintain digital systems infrastructure supporting other critical government operations</li><li>Workers who support necessary credentialing, vetting and licensing operations for critical sector workers and operations.</li><li>Workers who are critical to facilitating trade in support of the national, state, and local emergency response supply chain</li><li>Workers&nbsp;supporting public and private childcare establishments, pre-K establishments, K-12 schools, colleges, and universities for purposes of&nbsp;distance learning, provision of school meals,&nbsp;or&nbsp;care and supervision of&nbsp;minors&nbsp;to support&nbsp;essential workforce across all sectors</li><li>Staff at government offices who perform title search, notary, and recoding services in support of mortgage and real estate services and transactions;&nbsp;</li><li>Workers and instructors supporting academies and training facilities and courses for the purpose of graduating students and cadets that comprise the essential workforce for all identified critical sectors</li><li>Clergy for essential support and faith-based services that are provided through streaming or other technologies that support physical distancing and state public health guidelines.</li><li>Human services providers, especially for at risk populations, including home delivered meal providers for older adults, people with disabilities, and others with chronic health conditions; home-maker services for frail, homebound, older adults; personal assistance services providers to support activities of daily living for older adults, people with disabilities, and others with chronic health conditions who live independently in the community with supports and services; home health providers who deliver health care services for older adults, people with disabilities, and others with chronic health conditions who live independently in the community with supports and services.</li><li>Government entities, and contractors that work in support of local, state, and federal public health and medical mission sets, including but not limited to supporting access to healthcare and associated payment functions, conducting public health functions, providing medical care, supporting emergency management, or other services necessary for supporting the COVID-19 response.&nbsp;</li></ol>
 <p><strong>Relevant sector guidance:</strong></p>
 <ul><li>Schools and institutions of higher education<ul><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/School%20Guidance_ADA%20Compliant_FINAL.pdf">Guidance for schools (PDF)</a></li><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/School%20Guidance_ADA%20Compliant_FINAL%20(SP).pdf">Directrices para las escuelas sobre el nuevo coronavirus o COVID-19&nbsp;(PDF)</a></li><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/HigherEducationGuidanceonNovelCoronavirusorCOVID19.aspx">Guidance for colleges and universities</a></li><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/CDPH%20Higher%20Education%20Guidance_ADA%20Compliant_FINAL%20(SP).pdf">Directrices para las instituciones de educación superior sobre el nuevo coronavirus o COVID-19</a></li></ul></li></ul>
 <ul><li><a href="https://apps.cdpr.ca.gov/schoolipm/pubs/reminders_for_using_disinfectants.pdf">Guidance for Using Disinfectants at Schools and Child Cares</a><ul><li><a href="https://apps.cdpr.ca.gov/schoolipm/pubs/spanish/reminders_for_using_disinfectants_sp.pdf">Recordatorios&nbsp;para el&nbsp;uso&nbsp;de&nbsp;desinfectantes&nbsp;en&nbsp;las&nbsp;escuelas&nbsp;y&nbsp;guarderías</a></li></ul></li><li><a href="https://www.cdss.ca.gov/inforesources/community-care-licensing">Community care facilities, including assisted living facilities and child care</a></li></ul>
@@ -612,7 +612,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>9. <strong>Critical Manufacturing</strong></h4>
+<h4>9. Critical Manufacturing</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -650,7 +650,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>10. <strong>Financial Services</strong></h4>
+<h4>10. Financial Services</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -688,7 +688,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>11. <strong>Chemical and Hazardous Materials</strong></h4>
+<h4>11. Chemical and Hazardous Materials</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -726,7 +726,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>12. <strong>Defense Industrial Base</strong></h4>
+<h4>12. Defense Industrial Base</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -764,7 +764,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>13. <strong>Industrial, Commercial, Residential, and Sheltering Facilities and Services</strong></h4>
+<h4>13. Industrial, Commercial, Residential, and Sheltering Facilities and Services</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -798,11 +798,15 @@
 
 
 
-<h2><strong>Relevant guidance for all sectors:</strong></h2>
+<h2>Relevant guidance for all sectors</h2>
 
 
 
 <ul><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Face-Coverings-Guidance.aspx">Face Coverings Guidance</a><ul><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Orientaci%C3%B3n-Sobre-el-Uso-de-Mascarillas-de-Tela.aspx">Orientación Sobre el Uso de Mascarillas de Tela</a></li></ul></li><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/PublicHealthGuidanceSelfIsolationforOlderAdultsandThoseWhoHaveElevatedRisk.aspx">Self-Isolation for Older Adults and Those Who Have Elevated Risk</a><ul><li><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Aislamiento-para-Adultos-Mayores-y-Personas-que-Tienen-un-Riesgo-Elevado.aspx">Aislamiento para Adultos Mayores y Personas que Tienen un Riesgo Elevado</a></li></ul></li><li><a href="https://www.labor.ca.gov/coronavirus2019/">Employers, health care workers and workers in general industry</a></li></ul>
+
+
+
+<p></p>
 </div>
     </div>
   </div>
