--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 				<article class="video-item mx-auto mt-3" data-video="8S5iiKx5dhc">
 					<a class="video-modal-open video-thumb-link w-100 w-lg-40" data-video="8S5iiKx5dhc" href="https://youtu.be/8S5iiKx5dhc">
 						<figure class="video-thumb-photo">
-							<div class="video-thumb-play-button">
+							<div class="video-thumb-play-button" role="button" tabindex="0" aria-label="Watch video">
 								<svg class="video-thumb-play-button-icon" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 50 50">
 									<path class="st0" d="M0,45.9V4.4c0-3.3,2-4.2,4.9-2.5l32.9,19c4.7,2.6,4.8,5,0.6,7.5L5,47.6C1.7,49.6,0,48.5,0,45.9z"/>
 								</svg>
