--- a/care-in-senior-facilities/index.html
+++ b/care-in-senior-facilities/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Care in senior living</h1>
           
-            <p class="small-text">Last updated&nbsp;September 14, 2020 at 11:56 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 5:26 PM</p>
           
         </div>
       </div>
@@ -183,7 +183,7 @@
 
 
 
-<ul><li><a href="https://aging.ca.gov/download.ashx?lE0rcNUV0zaaXLD5JZ%2f6Uw%3d%3d">Frequently asked questions for friends and family</a></li><li><a href="https://www.engageca.org/s/Caring-From-Afar-Resources.pdf">Caregiving from afar: questions to ask the facility (PDF)</a></li><li><a href="https://theconsumervoice.org/issues/other-issues-and-resources/covid-19#ltc-ind">Coronavirus in long-term care: information for advocates</a></li><li><a href="https://dailycaring.com/nursing-home-lockdown-6-ways-to-stay-connected-with-seniors-during-a-coronavirus-scare/">6 Ways to stay connected with seniors</a></li></ul>
+<ul><li><a href="https://aging.ca.gov/download.ashx?lE0rcNUV0zaaXLD5JZ%2f6Uw%3d%3d">Frequently asked questions for friends and family</a></li><li><a href="https://www.engageca.org/s/Caring-From-Afar-Resources.pdf">Caregiving from afar: questions to ask the facility (PDF)</a></li><li><a href="https://theconsumervoice.org/issues/other-issues-and-resources/covid-19#ltc-ind">Coronavirus in long-term care:&nbsp;information for advocates</a></li><li><a href="https://dailycaring.com/nursing-home-lockdown-6-ways-to-stay-connected-with-seniors-during-a-coronavirus-scare/">6 Ways to stay connected with seniors</a></li></ul>
 
 
 
@@ -199,7 +199,7 @@
 
 
 
-<ul><li><a href="https://www.cdph.ca.gov/Programs/CHCQ/LCP/Pages/LNCAFL20.aspx">CDPH guidance for Skilled Nursing Facilities </a></li><li><a href="https://www.cdss.ca.gov/inforesources/community-care-licensing/policy/provider-information-notices/adult-senior-care">CDSS guidance for Residential Care Facilities for Elderly</a> </li></ul>
+<ul><li><a href="https://www.cdph.ca.gov/Programs/CHCQ/LCP/Pages/LNCAFL20.aspx">CDPH guidance for Skilled Nursing Facilities&nbsp;</a></li><li><a href="https://www.cdss.ca.gov/inforesources/community-care-licensing/policy/provider-information-notices/adult-senior-care">CDSS guidance for Residential Care Facilities for Elderly</a>&nbsp;</li></ul>
 
 
 
