--- a/more-ways-to-help/index.html
+++ b/more-ways-to-help/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>More ways to help</h1>
           
-            <p class="small-text">Last updated&nbsp;June 24, 2020 at 9:14 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 5:31 PM</p>
           
         </div>
       </div>
