--- a/get-tested/index.html
+++ b/get-tested/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Testing</h1>
           
-            <p class="small-text">Last updated&nbsp;November 23, 2020 at 9:57 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 5:39 PM</p>
           
         </div>
       </div>
