--- a/treatment-for-covid-19/index.html
+++ b/treatment-for-covid-19/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Treatment</h1>
           
-            <p class="small-text">Last updated&nbsp;November 23, 2020 at 11:42 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 5:40 PM</p>
           
         </div>
       </div>
