--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;November 24, 2020 at 4:38 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 5:44 PM</p>
           
         </div>
       </div>
