--- a/healthcare/index.html
+++ b/healthcare/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Healthcare and coverage</h1>
           
-            <p class="small-text">Last updated&nbsp;November 19, 2020 at 11:59 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 5:42 PM</p>
           
         </div>
       </div>
