--- a/request-ppe/index.html
+++ b/request-ppe/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Get PPE</h1>
           
-            <p class="small-text">Last updated&nbsp;September 11, 2020 at 9:05 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 5:44 PM</p>
           
         </div>
       </div>
