--- a/symptoms-and-risks/index.html
+++ b/symptoms-and-risks/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Symptoms and risks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 24, 2020 at 5:26 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 5:43 PM</p>
           
         </div>
       </div>
