--- a/zh-hans/safer-economy/index.html
+++ b/zh-hans/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的经济蓝图</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月27日, 上午10:48</p>
+            <p class="small-text">Last updated&nbsp;2020年11月27日, 下午1:37</p>
           
         </div>
       </div>
