--- a/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/restaurants-deliver-home-meals-for-seniors/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Great Plates Delivered: Home meals for seniors</h1>
           
-            <p class="small-text">Last updated&nbsp;December 2, 2020 at 10:11 AM</p>
+            <p class="small-text">Last updated&nbsp;December 2, 2020 at 2:27 PM</p>
           
         </div>
       </div>
@@ -175,7 +175,7 @@
 
 
 
-<p>We are pleased to announce that the Federal Emergency Management Agency (FEMA) Public Assistance (PA) program has authorized a time extension for the Great Plates Delivered program to January 7, 2020.</p>
+<p>We are pleased to announce that the Federal Emergency Management Agency (FEMA) Public Assistance (PA) program has authorized a time extension for the Great Plates Delivered program to January 7, 2021.</p>
 
 
 
