--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;December 2, 2020 at 11:04 AM</p>
+            <p class="small-text">Last updated&nbsp;December 2, 2020 at 2:30 PM</p>
           
         </div>
       </div>
