--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Disyembre 2, 2020 sa 11:04 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Disyembre 2, 2020 sa 2:30 PM</p>
           
         </div>
       </div>
