--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Latest news on COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;December 2, 2020 at 5:34 PM</p>
+            <p class="small-text">Last updated&nbsp;December 3, 2020 at 4:50 AM</p>
           
         </div>
       </div>
