--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Disyembre 2, 2020 sa 5:34 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Disyembre 3, 2020 sa 4:50 AM</p>
           
         </div>
       </div>
