--- a/zh-hans/safer-economy/index.html
+++ b/zh-hans/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的经济蓝图</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2020年12月2日, 下午5:34</p>
+            <p class="small-text">最后更新时间&nbsp;2020年12月3日, 上午4:50</p>
           
         </div>
       </div>
