--- a/zh-hant/data-and-tools/index.html
+++ b/zh-hant/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>數據和工具</h1>
           
-            <p class="small-text">最近更新&nbsp;2020年12月2日, 下午5:34</p>
+            <p class="small-text">最近更新&nbsp;2020年12月3日, 上午4:50</p>
           
         </div>
       </div>
