--- a/zh-hant/latest-news/index.html
+++ b/zh-hant/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有關COVID-19的最新消息</h1>
           
-            <p class="small-text">最近更新&nbsp;December 2, 2020 at 5:34 PM</p>
+            <p class="small-text">最近更新&nbsp;December 3, 2020 at 4:50 AM</p>
           
         </div>
       </div>
