--- a/masks-and-ppe/index.html
+++ b/masks-and-ppe/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Masks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 25, 2020 at 5:44 PM</p>
+            <p class="small-text">Last updated&nbsp;December 7, 2020 at 8:01 AM</p>
           
         </div>
       </div>
@@ -203,7 +203,7 @@
 
 
 
-<ul><li>In a car alone or solely with members of their own household.</li><li>Working in an office or in a room alone.</li><li>Actively eating or drinking. You should maintain a distance of at least six feet from those not in your household.</li><li>Outdoors and maintaining at least 6 feet of social distance from others not in their household. You must have a face covering with you at all times and must put it on if you are within 6 feet of others who are not in your household.</li><li>Getting a service to the nose or face for which temporary removal of the mask is necessary.</li><li>Your job  requires you to wear respiratory protection.</li><li>You are specifically exempted from wearing face coverings by an  <a href="https://covid19.ca.gov/industry-guidance/">Industry specific guidance</a>.</li></ul>
+<ul><li>In a car alone or solely with members of their own household.</li><li>Working in an office or in a room alone.</li><li>Actively eating or drinking. You should maintain a distance of at least six feet from those not in your household.</li><li>Outdoors and maintaining at least 6 feet of social distance from others not in their household. You must have a face covering with you at all times and must put it on if you are within 6 feet of others who are not in your household.</li><li>Getting a service to the nose or face for which temporary removal of the mask is necessary.</li><li>Your job&nbsp; requires you to wear respiratory protection.</li><li>You are specifically exempted from wearing face coverings by an  <a href="https://covid19.ca.gov/industry-guidance/">Industry specific guidance</a>.</li></ul>
 
 
 
@@ -482,7 +482,7 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>Face shields are not recommended as a substitute for masks or face coverings. They primarily provide eye protection for the person wearing it. It is unknown what level of protection a face shield provides to people nearby. </p>
-<p><a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/cloth-face-cover-guidance.html">CDC has detailed recommendations</a> for situations where face shields are the only option.</p>
+<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/faceshield_handout.pdf">CDPH has detailed recommendations</a> for situations where face shields are the only option.</p>
 
       </div>
     </div>
