--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white" href="education/">
-								<div class="link-arrow-label">How are schools and colleges reopening?</div>
+							<a class="link-arrow-white" href="contact-tracing/#California-COVID-Notify">
+								<div class="link-arrow-label">How can I participate in CA Notify?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
 						</li>
