--- a/tl/index.html
+++ b/tl/index.html
@@ -333,7 +333,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white" href="education/">
+							<a class="link-arrow-white" href="contact-tracing/#California-COVID-Notify">
 								<div class="link-arrow-label">Paano muling magbubukas ang mga paaralan?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
