--- a/vi/index.html
+++ b/vi/index.html
@@ -335,7 +335,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white" href="education/">
+							<a class="link-arrow-white" href="contact-tracing/#California-COVID-Notify">
 								<div class="link-arrow-label">Trường học mở cửa trở lại sẽ như thế nào?</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
