--- a/zh-hant/index.html
+++ b/zh-hant/index.html
@@ -333,7 +333,7 @@
 							</a>
 						</li>
 						<li>    
-							<a class="link-arrow-white" href="education/">
+							<a class="link-arrow-white" href="contact-tracing/#California-COVID-Notify">
 								<div class="link-arrow-label">學校如何重新開放？</div>
 								<cagov-arrow></cagov-arrow>
 							</a>
