--- a/healthcorps/index.html
+++ b/healthcorps/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>California Health Corps</h1>
           
-            <p class="small-text">Last updated&nbsp;December 4, 2020 at 11:17 AM</p>
+            <p class="small-text">Last updated&nbsp;December 7, 2020 at 10:17 AM</p>
           
         </div>
       </div>
@@ -199,7 +199,7 @@
 
 
 
-<ul><li>Nurses (RN, LVN, CNA) </li><li>Emergency medical technicians </li><li>Nurse practitioners </li><li>Paramedics</li><li>Physicians (MD, DO, psychiatrist) </li><li>Respiratory therapists </li><li>Behavioral health professionals </li></ul>
+<ul><li>Nurses (RN, LVN, CNA)&nbsp;</li><li>Emergency medical technicians&nbsp;</li><li>Nurse practitioners&nbsp;</li><li>Paramedics</li><li>Physicians (MD, DO, psychiatrist)&nbsp;</li><li>Respiratory therapists&nbsp;</li><li>Behavioral health professionals </li></ul>
 
 
 
@@ -452,7 +452,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="Health-Corps-Resources">Resources for the participants</h4>
+<h4 id="Health-Corps-Resources">Resources for participants</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
