--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;December 6, 2020 at 5:52 AM</p>
+            <p class="small-text">Last updated&nbsp;December 7, 2020 at 2:53 PM</p>
           
         </div>
       </div>
@@ -219,7 +219,7 @@
 
 
 
-<h4>First priority </h4>
+<h4>First priority&nbsp;</h4>
 
 
 
@@ -235,7 +235,7 @@
 
 
 
-<h4>Third priority </h4>
+<h4>Third priority&nbsp;</h4>
 
 
 
@@ -449,7 +449,7 @@
 
 
 
-<ul><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19Vaccine.aspx">COVID-19 vaccine planning</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Vaccine-Allocation-Framework-Phase-1A-Tiers.aspx">First Doses of COVID-19 Vaccine</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Vaccine-Regional-Distribution-First-Shipment.aspx">COVID-19 Vaccine Regional Distribution</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/index.html">Vaccines</a></li></ul>
+<ul><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19Vaccine.aspx">COVID-19 vaccine planning</a></li><li>CDPH: First Doses of COVID-19 Vaccine</li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Vaccine-Regional-Distribution-First-Shipment.aspx">COVID-19 Vaccine Regional Distribution</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/index.html">Vaccines</a></li></ul>
 
 
 
