--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 17, 2021 at 5:54 PM</p>
+            <p class="small-text">Last updated&nbsp;February 18, 2021 at 8:00 AM</p>
           
         </div>
       </div>
@@ -293,7 +293,7 @@
 
 
 
-<div style="display:none;" class="js-qa js-qa-question">How can I get a COVID-19 vaccination appointment?</div>
+<div style="display:none;" class="js-qa js-qa-question">How can I get a COVID-19 vaccine appointment?</div>
 
 
 
