--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
           </article>
         
           <article class="news-item trigger">
-              <h3 class="h4 mb-0 pb-2 color-black">Sign up for COVID-19 vaccine notifications</h3>
+              <h3 class="h4 mb-0 pb-2 color-black">Sign up for COVID-19 vaccination</h3>
               <p class="text-300">Vaccinations are in high demand. But you can find out when it’s your turn to get one. Sign up at myturn.ca.gov or call (833) 422-4255 and schedule your appointment, or get notified when appointments are available in your area.</p>
               <p class="mt-2 mb-0"><a class="recent-news-link" href="https://myturn.ca.gov/">Sign up now</a></p>
           </article>
